# fibonacci

./: LICENSE  README.md  fibonacci.py  pyproject.toml
src/fibonacci/: __init__.py  __main__.py
